Fixed Bug caused of misaligned boxes.
The boxes look okay now.

--- a/MathFun1000/Content/MathProblemStyle.css
+++ b/MathFun1000/Content/MathProblemStyle.css
@@ -6,12 +6,13 @@
 .box
 {
     display: inline-block;
-    width: 200px;
+    width: 250px;
     min-height: 50px;
     font-size: 15px;
-    padding: 10px 0px 10px 10px;
+    padding: 10px 10px 10px 10px;
     margin:  5px 5px 5px 5px;
     border: 2px solid black;
+    vertical-align: bottom;
 }
 
 .MainContainer
